# ai-writing-deodorant

./: Cargo.toml  README.md  README_ja.md
.github/workflows/: cloudflare.yml  pages.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/web/: Cargo.toml  index.html  style.css
crates/web/src/: main.rs
src/: main.rs
