[package]
name = "deo"
version = "0.1.0"
edition = "2021"
description = "CLI tool to remove AI-like formatting from text files"
license = "MIT"
repository = "https://github.com/hatappo/ai-writing-deodorant"

[[bin]]
name = "deo"
path = "src/main.rs"

[dependencies]
deo-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
